master
- Zixaphir
  Fix text spoilers
  New Themes
   -- ObsidianChan
   -- PaisleyChan

0.3beta
- Zixaphir
  New Theme:
   -- Minimalistic Mayhem
  Mascots (lots)
  Fixed broken options, like reply spacing
  Live editting of Style Options / Themes / Mascots

0.2beta
- Zixaphir
  Pagination options now work. Also fixed Board Navigation options.
  Cicle Checkboxes and On Side Pagination now work
  New Themes:
   -- AppChan
   -- BakaBT
   -- Blackberry Jam
   -- Midnight Caek
- Mayhem
  One-word-captcha: you don't need to input an extra space anymore, the true word will be duplicated.

0.1beta
- Zixaphir
  First 'stable' AppChan release. Little more than 4chan x + Style options. Based on 4chan x 2.34.8.