@@ -380,6 +380,56 @@ Themes =
     'Shadow Color'                : 'rgba(20,20,20,0.9)',
     'Dark Theme'                  : '1',
     'Custom CSS'                  : '#delform blockquote{color:#bbb;background:#343838;margin-bottom:10px;padding:8px;box-shadow:0px 0px 20px rgba(25,25,25,0.6);border:1px solid #343838;border-bottom:2px solid #444848;border-radius:0px 6px 6px 6px;padding-top:15px;}.name{font-weight:800;}.nameBlock>.useremail>.name:hover,.nameBlock>.useremail>.postertrip:hover{color:#00dffc;}a.forwardlink{color:#608cae;font-weight:800;}#delform blockquote{border-radius:3px;}.reply #delform blockquote{background-color:transparent;}div.reply, .reply.highlight{padding:0px;}#qp div.post{border:1px solid rgba(128,172,206,0.5);background-color:rgba(24,24,24,0.9);}.name,.postertrip{text-shadow:0px 0px 6px rgba(20,20,20,0.9);font-weight:bold;background:#343838;border:1px solid #343838;border-radius:5px 5px 0px 0px;-moz-border-radius:5px 5px 0px 0px;padding:4px 6px;padding-top:2px;}div.reply,form[name="delform"],#delform blockquote{margin:0px!important;padding:0px;}a{-moz-transition:all 0.5s ease;}a.pointer {font-weight:bold;font-weight:normal;color:#777;padding-right:5px;}form[name="delform"] table a img{position:relative;bottom:15px;right:10px;padding:0px;margin-bottom:10px;}.opContainer{-moz-transition:all 0.5s ease;opacity:0.45;-webkit-transition:all 0.5s ease;opacity:0.45;-o-transition:all 0.5s ease;opacity:0.45;}.opContainer:hover{opacity:1;}.reply,.reply.highlight{background:transparent;border:0px;padding:0px;padding-bottom:0px;border-radius:6px;}form[name="delform"] table blockquote{padding:5px;background:#343838;margin-top:0px;min-height:20px;padding-top:10px;clear:none;}table a[href^="http://images.4chan.org"] + blockquote{margin-top:-14px;padding-left:150px;}a.backlink{border:1px solid #343838;border-radius:5px 5px 0px 0px;background:#343838;padding:2px 4px 2px;text-decoration:none;}a.forwardlink{color:#608CAE;text-shadow:0 0 6px rgba(96,140,174,0.8);}body > .postingMode ~ form[name="delform"] .subject{font-weight: bold;letter-spacing: 3px;background: transparent;}div.reply {background-color: transparent;}#qp div.post .name, #qp div.post a.backlink, #qp div.post blockquote {background:none;border:none;box-shadow:none;border-radius:0px;}'
+  'Photon':
+    'Author'                      : 'Seaweed-chan',
+    'Author Tripcode'             : '!POMF.9waa',
+    'Background Image'            : '',
+    'Background Attachment'       : '',
+    'Background Position'         : '',
+    'Background Repeat'           : '',
+    'Background Color'            : 'rgba(238,238,238,1)',
+    'Dialog Background'           : 'rgba(38,238,238,1)',
+    'Dialog Border'               : 'rgba(204,204,204,1)',
+    'Thread Wrapper Background'   : 'rgba(0,0,0,0)',
+    'Thread Wrapper Border'       : 'rgba(0,0,0,0)',
+    'Reply Background'            : 'rgba(221,221,221,1)',
+    'Reply Border'                : 'rgba(204,204,204,1)',
+    'Highlighted Reply Background': 'rgba(204,204,204,1)',
+    'Highlighted Reply Border'    : 'rgba(204,204,204,1)',
+    'Backlinked Reply Outline'    : 'rgba(98,124,141,1)',
+    'Checkbox Background'         : 'rgba(255,255,238)',
+    'Checkbox Border'             : 'rgba(255,255,238)',
+    'Checkbox Checked Background' : 'rgba(188,192,212)',
+    'Input Background'            : 'rgba(255,255,255,1)',
+    'Input Border'                : 'rgba(204,204,204,1)',
+    'Hovered Input Background'    : 'rgba(204,204,204,1)',
+    'Hovered Input Border'        : 'rgba(204,204,204,1)',
+    'Focused Input Background'    : 'rgba(255,255,255,1)',
+    'Focused Input Border'        : 'rgba(0,74,153,1)',
+    'Buttons Background'          : 'rgba(255,255,238,1)',
+    'Buttons Border'              : 'rgba(204,204,204,1)',
+    'Navigation Background'       : 'rgba(238,238,238,0.9)',
+    'Navigation Border'           : 'rgba(238,238,238,0.9)',
+    'Links'                       : 'rgb(255,102,0)',
+    'Hovered Links'               : 'rgb(255,51,0)',
+    'Navigation Links'            : 'rgb(17,17,17)',
+    'Hovered Navigation Links'    : 'rgb(255,51,0)',
+    'Subjects'                    : 'rgb(17,17,17)',
+    'Names'                       : 'rgb(0,74,153)',
+    'Sage'                        : 'rgb(51,51,51)',
+    'Tripcodes'                   : 'rgb(255,51,0)',
+    'Emails'                      : 'rgb(255,102,0)',
+    'Post Numbers'                : 'rgb(51,51,51)',
+    'Text'                        : 'rgb(51,51,51)',
+    'Backlinks'                   : 'rgb(17,17,17)',
+    'Greentext'                   : 'rgb(120,153,34)',
+    'Board Title'                 : 'rgb(0,74,153)',
+    'Timestamps'                  : 'rgb(51,51,51)',
+    'Inputs'                      : 'rgb(0,0,0)',
+    'Warnings'                    : 'rbg(51,51,51)',
+    'Shadow Color'                : 'rgba(128,128,128,0.5)',
+    'Dark Theme'                  : '0',
+    'Custom CSS'                  : '.fileText{color: rgb(102,102,102);}#qp div.post{background-color:rgba(21,21,21,0.8);color:#FFF;border:1px solid rgba(255,255,255,1);outline:1px solid black;-moz-outline-radius:3px;-webkit-outline-radius:3px;-o-outline-radius:3px;}#qp div.post .name,#qp div.post .container a,#qp div.post .postNum a{color:#FFF;}#qp div.post .postertrip{color:#999;}#qp div.post .fileText{color:#999;}'
   'RedUX':
     'Author'                      : 'Zixaphir',
     'Author Tripcode'             : '!VGsTHECURE',
@@ -430,6 +480,56 @@ Themes =
     'Shadow Color'                : 'rgba(60,60,60,0.6)',
     'Dark Theme'                  : '1',
     'Custom CSS'                  : '.replyContainer > .reply {background-color: transparent;} body { background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIQAAACEAQMAAABrihHkAAAABlBMVEX///8AAABVwtN+AAAAAnRSTlMASuCaZbYAAAA+SURBVHhe7c2xCQAgDAXRKywsHcFRdDNxchtBkhHk4Lp88ui7hhaztBCkyYZ7fFHzI/Jk/GRpaWlpaWlpaR3scHNQSY3kigAAAABJRU5ErkJggg=="), -moz-radial-gradient(rgb(190,0,0), rgb(15,0,0)); background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIQAAACEAQMAAABrihHkAAAABlBMVEX///8AAABVwtN+AAAAAnRSTlMASuCaZbYAAAA+SURBVHhe7c2xCQAgDAXRKywsHcFRdDNxchtBkhHk4Lp88ui7hhaztBCkyYZ7fFHzI/Jk/GRpaWlpaWlpaR3scHNQSY3kigAAAABJRU5ErkJggg=="), -webkit-radial-gradient(rgb(190,0,0), rgb(15,0,0)); background-repeat: repeat, no-repeat !important; background-attachment: scroll, fixed !important; background-position: center, center !important;} #boardNavDesktop, .pages { background-color: rgba(0,0,0,0.7); } #boardNavDesktopFoot, #watcher, #watcher:hover, .deleteform { background-color: rgba(238,242,255,1); } div.reply { border: 0; border-bottom: 1px #ccc solid;} #qp div.post { background-color: rgba(0,0,0,0.7); border-color: rgba(0,0,0,0.7); } #qp div.post, #qp .postNum a { color: #fcd; } #qp .nameBlock > .useremail > .name, #qp .nameBlock > .useremail > .postertrip, #qp .name, #qp .postertrip, #qp .trip { color: #ffaac0; } #qp a { color: #aaaac8; } .boardBanner a, #qp a.backlink, #qp span.quote > a.quotelink { color: rgb(255,255,255); } #updater:not(:hover), #updater:not(:hover) #count:not(.new)::after, #stats { color: rgb(123,123,123); } .boardBanner {color: rgb(238,187,204)} .boardTitle { text-shadow: 1px 1px 1px #222; } #delform { background: -moz-linear-gradient(rgb(220,210,210), rgb(240,240,240) 400px); background: -webkit-linear-gradient(rgb(220,210,210), rgb(240,240,240) 400px); -o-linear-gradient(rgb(220,210,210), rgb(240,240,240) 400px); padding: 1px 15px 2px 15px; box-shadow: 0 20px 15px 20px rgba(0,0,0,0.7); border-radius: 4px; } #qr::before {color: #000;}'
+  'Zenburned':
+    'Author'                      : 'lazy',
+    'Author Tripcode'             : '!HONKYn7h1.',
+    'Background Image'            : '',
+    'Background Attachment'       : '',
+    'Background Position'         : '',
+    'Background Repeat'           : '',
+    'Background Color'            : 'rgba(63,63,63,1)',
+    'Dialog Background'           : 'rgba(87,87,87,1)',
+    'Dialog Border'               : 'rgba(87,87,87,1)',
+    'Thread Wrapper Background'   : 'rgba(0,0,0,0)',
+    'Thread Wrapper Border'       : 'rgba(0,0,0,0)',
+    'Reply Background'            : 'rgba(87,87,87,1)',
+    'Reply Border'                : 'rgba(87,87,87,1)',
+    'Highlighted Reply Background': 'rgba(38,38,38,1)',
+    'Highlighted Reply Border'    : 'rgba(38,38,38,1)',
+    'Backlinked Reply Outline'    : 'rgba(98,124,141,1)',
+    'Checkbox Background'         : 'rgba(63,63,63,1)',
+    'Checkbox Border'             : 'rgba(136,136,136,1)',
+    'Checkbox Checked Background' : 'rgba(17,17,17,1)',
+    'Input Background'            : 'rgba(87,87,87,1)',
+    'Input Border'                : 'rgba(136,136,136,1)',
+    'Hovered Input Background'    : 'rgba(38,38,38,1)',
+    'Hovered Input Border'        : 'rgba(38,38,38,1)',
+    'Focused Input Background'    : 'rgba(38,38,38,1)',
+    'Focused Input Border'        : 'rgba(153,136,238,1)',
+    'Buttons Background'          : 'rgba(49,60,54,1)',
+    'Buttons Border'              : 'rgba(136,136,136,1)',
+    'Navigation Background'       : 'rgba(63,63,63,0.9)',
+    'Navigation Border'           : 'rgba(63,63,63,0.9)',
+    'Links'                       : 'rgb(239,220,188)',
+    'Hovered Links'               : 'rgb(248,248,147)',
+    'Navigation Links'            : 'rgb(220,220,204)',
+    'Hovered Navigation Links'    : 'rgb(248,248,147)',
+    'Subjects'                    : 'rgb(170,170,170)',
+    'Names'                       : 'rgb(192,190,209)',
+    'Sage'                        : 'rgb(220,220,204)',
+    'Tripcodes'                   : 'rgb(140,208,211)',
+    'Emails'                      : 'rgb(239,220,188)',
+    'Post Numbers'                : 'rgb(220,220,204)',
+    'Text'                        : 'rgb(220,220,204)',
+    'Backlinks'                   : 'rgb(220,163,163)',
+    'Greentext'                   : 'rgb(127,159,127)',
+    'Board Title'                 : 'rgb(220,220,204)',
+    'Timestamps'                  : 'rgb(220,220,204)',
+    'Inputs'                      : 'rgb(220,220,204)',
+    'Warnings'                    : 'rbg(239,220,188)',
+    'Shadow Color'                : 'rgba(63,63,63,0.4)',
+    'Dark Theme'                  : '1',
+    'Custom CSS'                  : ''
 
 Mascots =
   SFW:
