@@ -1,9 +1,15 @@
 master
 - Zixaphir
   Fix text spoilers
+  New Options
+   -- Logo positions
+   -- Banner positions
+   -- Sidebar size
   New Themes
    -- ObsidianChan
    -- PaisleyChan
+   -- Photon
+   -- Zenburned
 
 0.3beta
 - Zixaphir
